# personal-context-engine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-video.txt  requirements.txt  setup.sh
.github/workflows/: ci.yml
config/: ec_formats.json  pce.json
examples/: README.md  sample_amazon_jp.csv  sample_amazon_us.csv  sample_credit_card.csv
schema/: init.sql  migrate_v0.2.sql  migrate_v1.0.sql
scripts/: bootstrap.py  common.py  import_amazon.py  import_csv_generic.py  import_ec_plugins.py  import_rakuten.py  import_receipt.py  process_video.py  process_video.sh
skills/life-dashboard/: SKILL.md
skills/possession-manager/: SKILL.md
skills/purchase-importer/: SKILL.md
skills/receipt-scanner/: SKILL.md
skills/video-cataloger/: SKILL.md
tests/: conftest.py  test_edge_cases.py  test_import_flow.py  test_parsers.py  test_schema.py
